fix: 동일 파라미터 사용

--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "rewrites": [
     { "source": "/(.*)", "destination": "/" },
     {
-      "source": "/chat/(.*)",
+      "source": "/chat/:path*",
       "destination": "https://global-connecting.du.r.appspot.com/chat/:path*"
     }
   ]
